chanaged travis-cli script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
   - oraclejdk8
   - oraclejdk7
-script: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script: gradle clean build
 notifications:
   email: siddharth.dce08@gmail.com
 
